--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,19 @@
   <title>FIBA</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="FIBA can convert any File to Base64 or Byte Array. PNG to Base64, PDF to base64, JPG to base64, HTML to base64 etc.">
+    <meta name="author" content="iTarunGM">
+
+    <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
+	<meta property="og:site_name" content="FIBA" /> <!-- website name -->
+	<meta property="og:site" content="https://file-to-base64.web.app/" /> <!-- website link -->
+	<meta property="og:title" content="FIBA - File to BASE64"/> <!-- title shown in the actual shared post -->
+	<meta property="og:description" content="FIBA can convert any FILE to BASE64 and Vice Versa" /> <!-- description shown in the actual shared post -->
+	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
+	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
+	<meta property="og:type" content="article" />
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Styles -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
@@ -25,7 +38,8 @@
   <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
     <script src="assets/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
